# smart_kiln

./: .gitignore  README.md  pyproject.toml  test_camera.py
src/smart_kiln/: spreadsheet.py
tests/: test_ws.py
